ChatMessage MongoEntity createad

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,10 @@
 quarkus.console.color=true
 quarkus.log.level=INFO
 quarkus.log.file.enable=false
+
+# MONGODB
+quarkus.mongodb.connection-string=mongodb://peppa:pig@localhost:27017
+quarkus.mongodb.database = chat_db
+quarkus.mongodb."mongo-client-configs".credentials.auth-source = admin
+quarkus.mongodb."mongo-client-configs".credentials.auth-mechanism = SCRAM_SHA_256
+quarkus.log.category."io.quarkus.mongodb.panache.common.runtime".level=DEBUG
