--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,9 @@ quarkus.mongodb.database = chat_db
 quarkus.mongodb."mongo-client-configs".credentials.auth-source = admin
 quarkus.mongodb."mongo-client-configs".credentials.auth-mechanism = SCRAM_SHA_256
 quarkus.log.category."io.quarkus.mongodb.panache.common.runtime".level=DEBUG
+
+# AUTH
+mp.jwt.verify.publickey.location=publicKey.pem
+mp.jwt.verify.issuer=chatq-auth-service
+
+quarkus.native.resources.includes=publicKey.pem
