Basic auth with JWT done

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,5 +13,6 @@ quarkus.log.category."io.quarkus.mongodb.panache.common.runtime".level=DEBUG
 # AUTH
 mp.jwt.verify.publickey.location=publicKey.pem
 mp.jwt.verify.issuer=chatq-auth-service
+smallrye.jwt.sign.key.location=privateKey.pem
 
 quarkus.native.resources.includes=publicKey.pem
