start reactive way redis

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,5 +14,7 @@ quarkus.log.category."io.quarkus.mongodb.panache.common.runtime".level=DEBUG
 mp.jwt.verify.publickey.location=publicKey.pem
 mp.jwt.verify.issuer=chatq-auth-service
 smallrye.jwt.sign.key.location=privateKey.pem
-
 quarkus.native.resources.includes=publicKey.pem
+
+# REDIS
+quarkus.redis.hosts=redis://:redpig@localhost:6379/0
