--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,12 @@ quarkus.console.color=true
 quarkus.log.level=INFO
 quarkus.log.file.enable=false
 
+# CORS
+quarkus.http.cors=true
+quarkus.http.cors.origins=*
+quarkus.http.cors.methods=GET,POST,PUT,DELETE
+quarkus.http.cors.headers=accept,authorization,content-type
+
 # MONGODB
 quarkus.mongodb.connection-string=mongodb://peppa:pig@localhost:27017
 quarkus.mongodb.database = chat_db
@@ -17,4 +23,4 @@ smallrye.jwt.sign.key.location=privateKey.pem
 quarkus.native.resources.includes=publicKey.pem
 
 # REDIS
-quarkus.redis.hosts=redis://:redpig@localhost:6379/0
+REDIS_HOST=redis://redpig@localhost:6379/0
